[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-saas-starter"
version = "0.1.0"
description = "Full-stack SaaS starter for deploying agents as a service."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/agent-saas-starter"
Issues = "https://github.com/erron-ai/agent-saas-starter/issues"

[project.scripts]
agent-saas-starter = "agent_saas_starter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
